[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = "A CLI tool for managing a basic newsletter."
authors = ["Erich Grunewald <erichgrunewald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"

[tool.poetry.scripts]
nwsl = "newsletter.newsletter:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
